src/test/resources/rules/fail/ConstantName.java
package rules.fail;

public class ConstantName {
    public static final int not_screaming_snake_case = 10;
}